--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,17 +2,66 @@ name: $(GitAssemblyInformationalVersion)
 
 resources:
 - repo: self
-  clean: true
+  clean: "true"
+
+trigger:
+  branches:
+    include:
+    - master
+
+pr:
+  branches:
+    include:
+    - '*'
 
 jobs:
-
-- template: build.yml  
-  parameters:
-    name: VS2019
-    visualStudioVersion: '2019'
+- job: VS2019
+  pool:
+    name: 'Hosted Windows 2019 with VS2019'
+  variables:
+    nugetVersion: 5.8.0
+    instrumentationKey: $(AppInsightsInstrumentationKey)
     artifactName: 'SpecFlow.VisualStudio.VS2019.CI-BuildResult'
     artifactFileName: '$(Build.ArtifactStagingDirectory)/SpecFlow.VisualStudio.VisualStudioIntegration.zip'
-    appInsightsInstrumentationKey: $(AppInsightsInstrumentationKey)
-    pool:
-      name: 'Hosted Windows 2019 with VS2019'
+  steps:
+  - task: NuGetToolInstaller@0
+    displayName: 'Use NuGet'
+    inputs:
+      versionSpec: $(nugetVersion)
 
+  - task: PowerShell@2
+    displayName: 'restore & build Release'
+    inputs: 
+      filePath: build.ps1
+      workingDirectory: ./
+      arguments: Release -appInsightsInstrumentationKey $(instrumentationKey)
+      pwsh: true
+
+  - task: ArchiveFiles@2
+    displayName: 'Archive $(Build.SourcesDirectory)'
+    inputs:
+      rootFolderOrFile: '$(Build.SourcesDirectory)'
+      archiveFile: $(artifactFileName) 
+
+  - task: PublishBuildArtifacts@1
+    displayName: 'Publish Artifact: SpecFlow.VisualStudio.CI-BuildResult'
+    inputs:
+      PathtoPublish: $(artifactFileName) 
+      ArtifactName: $(artifactName)
+
+  - task: PublishBuildArtifacts@1
+    displayName: 'Publish Artifact: VS2019 Extension'
+    inputs:
+      PathtoPublish: '$(Build.SourcesDirectory)/VsIntegration/bin/Release/TechTalk.SpecFlow.VisualStudioIntegration.vsix'
+      ArtifactName: VS2019
+
+  - task: PublishBuildArtifacts@1
+    displayName: 'Publish Artifact: VS2017 Extension'
+    inputs:
+      PathtoPublish: '$(Build.SourcesDirectory)/VsIntegration2017/bin/Release/TechTalk.SpecFlow.VsIntegration.2017.vsix'
+      ArtifactName: VS2017
+
+  - task: whitesource.ws-bolt.bolt.wss.WhiteSource Bolt@19
+    displayName: 'WhiteSource Bolt'
+    inputs:
+      advance: true
