--- a/VsIntegration2022/TechTalk.SpecFlow.VsIntegration.2022.csproj
+++ b/VsIntegration2022/TechTalk.SpecFlow.VsIntegration.2022.csproj
@@ -126,7 +126,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <VSCTCompile Include="VisualStudioCommands.vsct">
+    <VSCTCompile Include="..\VisualStudioCommands.vsct">
+      <Link>VisualStudioCommands.vsct</Link>
       <ResourceName>Menus.ctmenu</ResourceName>
       <SubType>Designer</SubType>
     </VSCTCompile>
