--- a/SpecFlowStarterProjectTemplate/ProjectTemplate.csproj
+++ b/SpecFlowStarterProjectTemplate/ProjectTemplate.csproj
@@ -2,37 +2,23 @@
 
   <PropertyGroup>
     <TargetFramework>$dotnetframework$</TargetFramework>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
-    <PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.5" />
-
-    $if$ ('$unittestframework$' == 'runner')
-    <PackageReference Include="SpecRun.SpecFlow" Version="3.9.7" />
-    $endif$
-
-    $if$ ('$unittestframework$' == 'xunit')
-    <PackageReference Include="SpecFlow.xUnit" Version="3.9.8" />
-    <PackageReference Include="xunit" Version="2.4.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
-    $endif$
-
-    $if$ ('$unittestframework$' == 'nunit')
-    <PackageReference Include="SpecFlow.NUnit" Version="3.9.8" />
-    <PackageReference Include="nunit" Version="3.13.1" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
-    $endif$
-
-    $if$ ('$unittestframework$' == 'mstest')
-    <PackageReference Include="SpecFlow.MsTest" Version="3.9.8" />
-    <PackageReference Include="MSTest.TestAdapter" Version="2.1.2" />
-    <PackageReference Include="MSTest.TestFramework" Version="2.1.2" />
-    $endif$
-
-    $if$ ('$fluentassertionsincluded$' == 'True')
-    <PackageReference Include="FluentAssertions" Version="5.10.3" />
-    $endif$
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+    <PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.57" />$if$ ('$unittestframework$' == 'runner')
+    <PackageReference Include="SpecRun.SpecFlow" Version="3.9.7" />$endif$$if$ ('$unittestframework$' == 'xunit')
+    <PackageReference Include="SpecFlow.xUnit" Version="3.9.22" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" />$endif$$if$ ('$unittestframework$' == 'nunit')
+    <PackageReference Include="SpecFlow.NUnit" Version="3.9.22" />
+    <PackageReference Include="nunit" Version="3.13.2" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.1.0" />$endif$$if$ ('$unittestframework$' == 'mstest')
+    <PackageReference Include="SpecFlow.MsTest" Version="3.9.22" />
+    <PackageReference Include="MSTest.TestAdapter" Version="2.2.7" />
+    <PackageReference Include="MSTest.TestFramework" Version="2.2.7" />$endif$$if$ ('$fluentassertionsincluded$' == 'True')
+    <PackageReference Include="FluentAssertions" Version="6.2.0" />$endif$
   </ItemGroup>
 
   <ItemGroup>
